cs489appsd-hotelbooking/hotel-booking-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-booking-backend
  namespace: hotel-booking-system
  labels:
    app.kubernetes.io/name: hotel-booking
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: hotel-booking-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: hotel-booking-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hotel-booking
        app.kubernetes.io/component: backend
        app.kubernetes.io/instance: hotel-booking-api
    spec:
      containers:
        - name: hotel-booking-backend
          image: dunky2012/hotel-booking-backend
          ports:
            - containerPort: 5001
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
