cs489appsd-hotelbooking/hotel-booking-backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hotel-booking-backend
  namespace: hotel-booking-system
  labels:
    app.kubernetes.io/name: hotel-booking
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: hotel-booking-api
spec:
  containers:
    - name: hotel-booking-backend
      image: dunky2012/hotel-booking-backend
      resources:
        requests:
          memory: "128Mi"
          cpu: "200m"
        limits:
          memory: "256Mi"
      ports:
        - containerPort: 5001
