cs489appsd-hotelbooking/hotel-booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-booking-backend-svc
  namespace: hotel-booking-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: hotel-booking-api
  ports:
    - port: 5001
      targetPort: 5001
