cs489appsd-hotelbooking/hotel-booking-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hotel-booking-ingress
  namespace: hotel-booking-system
  labels:
    app.kubernetes.io/name: hotel-booking-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hotel-booking-backend-svc
                port:
                  number: 5001
